# advent-of-code

./: README.md  advent-of-code.cabal  flake.nix
.github/workflows/: release.yml
docs/: Advent-Of-Code-CLI.html  Advent-Of-Code-Input.html  Advent-Of-Code-Test-Parsing.html  Advent-Of-Code-Test-Types.html  Advent-Of-Code-Test.html  Advent-Of-Code.html  advent-of-code.haddock  advent-of-code.txt  doc-index.html  doc-index.json  index.html
docs/src/: Advent.Of.Code.CLI.html  Advent.Of.Code.Input.html  Advent.Of.Code.Test.Parsing.html  Advent.Of.Code.Test.Types.html  Advent.Of.Code.Test.html  Advent.Of.Code.html  Paths_advent_of_code.html
src/Advent/Of/: Code.hs
src/Advent/Of/Code/: CLI.hs  Diagnostics.hs  Input.hs  Options.hs  Solution.hs  Test.hs  Toml.hs
src/Advent/Of/Code/Test/: Parsing.hs  Types.hs
test/: Main.hs
test/Test/Advent/Of/Code/Test/: Parsing.hs
