cabal-version: 2.4
name:          advent-of-code
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  exposed-modules:
    Advent.Of.Code
    Advent.Of.Code.Input

  ghc-options:        -Wall -Werror=incomplete-patterns
  default-extensions:
    BlockArguments
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    ViewPatterns

  build-depends:
    , advent-of-code-api    ^>=0.2.8
    , base                  ^>=4.14.1.0
    , containers            ^>=0.6.5
    , criterion             ^>=1.5.11
    , optparse-applicative  ^>=0.16.1
    , text                  ^>=1.2.4
