cabal-version: 2.4
name:          advent-of-code
version:       0.2.0.0
synopsis:      Advent of Code framework
description:   Framework for automatically fetching, testing, benchmarking, and submitting AoC problems
category:      Web
license:       ISC
license-file:  LICENSE
homepage:      https://github.com/pnotequalnp/advent-of-code
bug-reports:   https://github.com/pnotequalnp/advent-of-code/issues
author:        Kevin Mullins
maintainer:    kevin@pnotequalnp.com
copyright:     Kevin Mullins 2021-2022

source-repository head
  type: git
  location: https://github.com/pnotequalnp/advent-of-code

common base
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Werror=incomplete-patterns
    -fno-show-valid-hole-fits -Wno-unticked-promoted-constructors

  default-extensions:
    BlockArguments
    DeriveGeneric
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    TupleSections
    TypeApplications
    ViewPatterns

  build-depends:
    , base                  >=4.14.1.0 && <5.0
    , containers            ^>=0.6.5
    , text                  ^>=1.2.4

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Advent.Of.Code
    Advent.Of.Code.CLI
    Advent.Of.Code.Input
    Advent.Of.Code.Test
    Advent.Of.Code.Test.Parsing
    Advent.Of.Code.Test.Types

  other-modules:
    Paths_advent_of_code

  autogen-modules:
    Paths_advent_of_code

  build-depends:
    , advent-of-code-api    ^>=0.2.8
    , criterion             ^>=1.5.11
    , optparse-applicative  ^>=0.16.1
    , tasty                 ^>=1.4.2
    , tasty-hunit           ^>=0.10.0
    , tomland               ^>=1.3.2

test-suite advent-of-code-test
  import:         base
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  other-modules:
    Test.Advent.Of.Code.Test.Parsing

  build-depends:
    , advent-of-code
    , advent-of-code-api    ^>=0.2.8
    , tasty                 ^>=1.4.2
    , tasty-hunit           ^>=0.10.0
