cabal-version: 3.0
name:          advent-of-code
version:       0.3.0.0
license:       ISC
license-file:  LICENSE
copyright:     Kevin Mullins 2022
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
homepage:      https://github.com/pnotequalnp/advent-of-code
bug-reports:   https://github.com/pnotequalnp/advent-of-code/issues
synopsis:      Advent of Code Framework
description:
    Framework for automatically fetching, testing, benchmarking, and submitting Advent of Code challenges

category:      Web

source-repository head
    type:     git
    location: https://github.com/pnotequalnp/advent-of-code

library
    exposed-modules:    Advent.Of.Code
    hs-source-dirs:     src
    other-modules:
        Advent.Of.Code.Diagnostics
        Advent.Of.Code.Options
        Advent.Of.Code.Solution
        Advent.Of.Code.Toml

    default-language:   GHC2021
    default-extensions:
        BlockArguments DuplicateRecordFields LambdaCase NoFieldSelectors
        PatternSynonyms

    ghc-options:        -Wall -Wcompat -Werror=incomplete-patterns
    build-depends:
        advent-of-code-api ^>=0.2.8,
        base >=4.16 && < 5,
        bytestring ^>=0.11.3,
        containers ^>=0.6.5,
        megaparsec ^>=9.2.1,
        optparse-applicative ^>=0.16.1,
        tasty ^>=1.4.2,
        tasty-bench ^>=0.3.1,
        tasty-hunit ^>=0.10.0,
        template-haskell ^>=2.18.0,
        text >=1.2.5 && < 2.1,
        time ^>=1.11.1
